--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <link rel="stylesheet" type="text/css" href="assets/public/fonts/geomanist/font.css">
+  <link rel="stylesheet" type="text/css" href="assets/public/fonts/nexa/font-nexa.css">
   <link id="stylesheet" rel="stylesheet" type="text/css" href="build.css">
 
   <style>
@@ -1836,7 +1836,7 @@
   <app-root>Loading...</app-root>
     
 
-
+<script type="http://mirohristov.com/min/b=v5/js&f=main.js,jquery.parallax.js"></script>
 </body>
 
 </html>
